--- a/HotelASP.NET/Pages/Contactos.cshtml
+++ b/HotelASP.NET/Pages/Contactos.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @using HotelASP.NET.Pages
+@using HotelASP.NET.Pages.Cliente
 @model ContactosModel
 @{
     ViewData["Title"] = "Contacto - EasyReverHotels";
@@ -12,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - EasyReverHotels</title>
     <link rel="stylesheet" href="~/css/Contactos.css" />
+   
  
 </head>
 <body>
@@ -19,7 +21,7 @@
         <div class="logo">Easy<span>Rever</span>Hotels</div>
         <nav class="nav-container">
             <ul>
-                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="/Cliente/Index">Inicio</a></li>
                 <li><a href="#habitaciones">Habitaciones</a></li>
                 <li><a href="#servicios">Servicios</a></li>
                 <li><a href="#contacto">Contacto</a></li>
